# AZA_final_assignment_FIIT

./: CMakeLists.txt  README.md
AZA_final_assignment_Mikova/: AZA_final_assignment_Mikova.cpp  AZA_final_assignment_Mikova.h  AZA_task1_Mikova.cpp  AZA_task2_Mikova.cpp  AZA_task3_Mikova.cpp  AZA_task4_Mikova.cpp  CMakeLists.txt
